<package format="3">
  <name>timer_execution</name>
  <version>0.0.1</version>
  <description>Python ROS 2 node with timing</description>
  <maintainer email="annadiplacido3@gmail.com">Anna</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
